# caer

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  dm_subset.txt  dots.sh  flake.nix  graph_cfg.sh  main.dm  opt.txt  rustfmt.toml  show_cfg.sh
aco/: Cargo.toml
aco/src/: context.rs  coro.rs  lib.rs  stack.rs
aco_sys/: Cargo.toml  build.rs
aco_sys/src/: lib.rs  shim.c  shim.h
aed/client/: Cargo.toml
aed/client/dm/: client.dmb  client.dme
aed/client/src/: rpc.rs
aed/common/: Cargo.toml
aed/common/src/: defs.rs
aed/server/: Cargo.toml
aed/server/src/bug/: bug.rs
aed_client/: .gitignore  Cargo.toml
aed_client/dm/: client.dm  client.dme  drun.sh  iconmap.dm  icons.dmi  lbuild.sh
aed_client/src/: client.rs  lib.rs
aed_common/: Cargo.toml
aed_common/src/: defs.rs  lib.rs  messages.rs
aed_server/: Cargo.toml
aed_server/src/: interface.rs  lib.rs  main.rs  master_controller.rs  server.rs
aed_server/src/runtime/: mod.rs  runtime.rs
caer_codegen_llvm/: Cargo.toml
caer_codegen_llvm/src/: const_value.rs  context.rs  emit_type.rs  func.rs  lib.rs  proc.rs  prog.rs  repr.rs  rt_type.rs  symbol_table.rs  type_manager.rs  value.rs
caer_compiler/: .gitignore  Cargo.toml  badbits.txt  badty.dm  build.rs  dm_subset.txt  exp.bsc  graph_cfg.sh  main.dm  opt.txt  run.sh  show_cfg.sh  to_test.txt  ty.txt
caer_compiler/dm/: datum_simple.dm  min.dm  test_main.dm
caer_compiler/src/: cfg.rs  emit.rs  frontend.rs  ir.rs  main.rs
caer_compiler/src/emit/: context.rs  proc.rs  prog.rs  value.rs
caer_compiler/src/frontend/: block_builder.rs  builder.rs  cfg_builder.rs  proc_builder.rs  tree.rs
caer_compiler/src/ir/: analysis.rs  cfg.rs  env.rs  id.rs
caer_compiler/src/ty/: infer.rs  mod.rs  op.rs  ty.rs
caer_frontend/: Cargo.toml
caer_frontend/src/: block_builder.rs  func_builder.rs  ir_builder.rs  lib.rs  objtree_wrapper.rs  proc_builder.rs  traits.rs  tree.rs  tree_builder.rs
caer_infer/: Cargo.toml
caer_infer/src/: infer.rs  lib.rs
caer_ir/: Cargo.toml
caer_ir/src/: analysis.rs  cfg.rs  const_val.rs  env.rs  id.rs  lib.rs  module.rs  proc.rs  string.rs  type_repo.rs  walker.rs
caer_runtime/: Cargo.toml
caer_runtime/src/: alloc.rs  arg_pack.rs  datum.rs  eh.rs  environment.rs  exec.rs  export.rs  ffi.rs  gc.rs  gc_stackmap.rs  heap_object.rs  lib.rs  list.rs  meta_runtime.rs  op.rs  proc_spec.rs  rtti.rs  runtime.rs  string.rs  string_table.rs  sync.rs  type_tree.rs  val.rs  vtable.rs
caer_runtime/src/gc/: mark.rs  mod.rs  scan.rs  state.rs  sweep.rs
caer_shimgen/: Cargo.toml
caer_shimgen/src/: error.rs  lib.rs
caer_types/: Cargo.toml
caer_types/src/: func.rs  heap_object.rs  id.rs  instance.rs  layout.rs  lib.rs  op.rs  proc.rs  rt_env.rs  rtti.rs  string.rs  ty.rs  type_tree.rs  val.rs
caer_util/: Cargo.toml
caer_util/src/: traits.rs
client/: Cargo.toml
client/dm/: client.dm  client.dmb  dbuild.sh  lrun.sh
client/src/: client.rs  lib.rs  rpc_grpc.rs
common/src/: defs.rs  lib.rs  messages.rs
cstub_bindgen_macro/: Cargo.toml
cstub_bindgen_macro/src/: lib.rs
index_vec/: README.md
index_vec/src/: lib.rs  macros.rs
indexed_vec/: .gitignore  Cargo.toml  Readme.md
indexed_vec/src/: lib.rs
llvm_stackmaps/: Cargo.toml
llvm_stackmaps/src/: lib.rs  parser.rs  stackmap.rs
notes/: dm_quirks.md  glossary.md  impl.md  layout.md
pinion/: Cargo.toml
pinion/src/: composite.rs  compound.rs  const_wrap.rs  func.rs  indexer.rs  interface.rs  layout.rs  layout_ctx.rs  lib.rs  ptr.rs  scalar.rs  traits.rs  types.rs
pinion_macros/: Cargo.toml
pinion_macros/src/: attr.rs  ctx.rs  data.rs  export.rs  func.rs  helpers.rs  lib.rs  ty.rs
pinion_macros/src/derivable/: mod.rs  pinion_const_wrap.rs  pinion_data.rs
pinion_types/: Cargo.toml
pinion_types/src/: layout.rs  lib.rs  types.rs
pinion_work/: Cargo.toml
pinion_work/src/: lib.rs  main.rs
runner/: graph_cfg.sh  link.ld  run.sh  show_cfg.sh
runner/dm/: just_val.dm  min_closure.dm  stringgc.dm
rustc_build_helper/: lib.rs
rustc_dwarf/: Cargo.toml
rustc_dwarf/src/: lib.rs  tests.rs
rustc_unwind/: Cargo.toml  build.rs
rustc_unwind/src/: lib.rs  libunwind.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
server/src/runtime/: runtime.rs
src/: ast.rs  basic.lalrpop  cfg.rs  emit.rs  frontend.rs  lib.rs  main.rs  op.rs  runtime.rs  string.rs  string_table.rs  ty.rs  val.rs
src/ty/: infer.rs  mod.rs  ty.rs
