[workspace]
members = [
    "aco",
    "aco_sys",
    "aed_common",
    "aed_server",
    "caer_codegen_llvm",
    "caer_compiler",
    "caer_frontend",
    "caer_infer",
    "caer_ir",
    "caer_runtime",
    "caer_shimgen",
    "caer_types",
    "caer_util",
    "llvm_stackmaps",
    "rustc_build_helper",
    "rustc_dwarf",
    "rustc_unwind",
]
exclude = [
    # aed_client needs a toolchain override
    "aed_client",
]
