[package]
authors = ["Colm Ó hIcí <colmohici@gmail.com>"]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.0.0"
serde = "1.0.37"
serde_cbor = "0.8.2"
serde_derive = "1.0.37"
serde_json = "1.0.13"
bytes = "1.0.1"
futures = "0.3.12"
tokio-util = { version = "0.6.3", features = ["codec", "io"] }
tokio = { version = "1.2.0", features = ["net", "rt", "io-util", "macros", "rt-multi-thread"] }

[dependencies.aed_common]
path = "../aed_common"

[lib]
crate-type = ["dylib"]
name = "mclient"
