[package]
authors = ["Colm Ó hIcí <colmohici@gmail.com>"]
name = "server"
edition = "2018"
version = "0.1.0"

[lib]
name = "ludo"
crate-type = ["cdylib"]

[dependencies]
bytes = "0.4.6"
futures = "0.1.20"
indexmap = "1.0.1"
quote = "0.6.10"
serde_cbor = "0.8.2"
snowflake = "1.3.0"
syn = "0.15.21"
tokio = "0.1.5"
tokio-io = "0.1.6"
tokio-serde-cbor = "0.2.1"
tokio-serde-json = "0.0.0"

[dependencies.aed_common]
path = "../aed_common"
