[package]
authors = ["Colm Ó hIcí <colmohici@gmail.com>"]
name = "aed_server"
edition = "2018"
version = "0.1.0"

[dependencies]
indexmap = "1.0.1"
quote = "0.6.10"
serde_cbor = "0.10.2"
snowflake = "1.3.0"
syn = "0.15.21"
tokio = { version = "1.2.0", features = ["net", "rt", "io-util", "macros", "rt-multi-thread"] }
tokio-serde-cbor = "0.6.0"
tokio-serde-json = "0.3.0"
tokio-util = { version = "0.6.3", features = ["codec", "io"] }
tokio-stream = "0.1.3"
futures = "0.3.12"
bytes = "1.0.1"

[dependencies.aed_common]
path = "../aed_common"
