[package]
authors = ["Colm Ó hIcí <colmohici@gmail.com>"]
name = "aed_server"
edition = "2021"
version = "0.1.0"

[dependencies]
indexmap = "1.6.2"
quote = "1.0.9"
serde_cbor = "0.11.1"
snowflake = "1.3.0"
syn = "1.0.72"
tokio = { version = "1.5.0", features = ["net", "rt", "io-util", "macros", "rt-multi-thread"] }
tokio-serde-cbor = "0.6.0"
tokio-serde-json = "0.3.0"
tokio-util = { version = "0.6.6", features = ["codec", "io"] }
tokio-stream = "0.1.5"
futures = "0.3.14"
bytes = "1.0.1"

[dependencies.aed_common]
path = "../aed_common"
