[package]
name = "caer_codegen_llvm"
version = "0.1.0"
authors = ["Colm Ó hIcí <git@ohici.ie>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3.1"
caer_ir = { path = "../caer_ir" }
# pretty much just to get runtime's size for static alloc
caer_runtime = { path = "../caer_runtime" }
caer_types = { path = "../caer_types" }
either = "1.6.0"
index_vec = { version = "0.1.2", features = ["serde"] }
pinion = { path = "../pinion" }
serde_json = "1.0.57"

[dependencies.inkwell]
git = "https://github.com/mloc/inkwell"
branch = "exceptions"
