[package]
authors = ["Colm Ó hIcí <colmohici@gmail.com>"]
edition = "2018"
name = "caer_compiler"
version = "0.1.0"

[dependencies]
dot = "0.1.4"
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
index_vec = { version = "0.1.1", features = ["serde"] }
ena = "0.14.0"
thiserror = "1.0.19"
petgraph = "0.5.1"
either = "1.5.3"
serde_json = "1.0.56"

[dependencies.dreammaker]
git = "https://github.com/SpaceManiac/SpacemanDMM"

[dependencies.caer_runtime]
path = "../caer_runtime"

[dependencies.caer_util]
path = "../caer_util"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "llvm10-0"
