[package]
authors = ["Colm Ó hIcí <colmohici@gmail.com>"]
edition = "2018"
name = "caer_compiler"
version = "0.1.0"

[dependencies]
dot = "0.1.4"
bincode = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
index_vec = { version = "0.1.2", features = ["serde"] }
ena = "0.14.0"
thiserror = "1.0.20"
petgraph = "0.5.1"
either = "1.5.3"
serde_json = "1.0.57"

[dependencies.dreammaker]
git = "https://github.com/mloc/SpacemanDMM"
branch = "catch-param"

[dependencies.caer_runtime]
path = "../caer_runtime"

[dependencies.caer_util]
path = "../caer_util"

[dependencies.inkwell]
git = "https://github.com/mloc/inkwell"
branch = "exceptions"
