[package]
name = "caer_ir"
version = "0.1.0"
authors = ["Colm Ó hIcí <git@ohici.ie>"]
edition = "2018"

[dependencies]
index_vec = "0.1.2"
serde = { version = "1.0.115", features = ["derive"] }
caer_infer = { path = "../caer_infer" }
caer_types = { path = "../caer_types" }
caer_util = { path = "../caer_util" }
bincode = "1.3.1"
dot = "0.1.4"
ordered-float = "2.0.0"
