[package]
name = "caer_runtime"
version = "0.1.0"
authors = ["Colm Ó hIcí <colmohici@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "caer_runtime"
crate-type = ["cdylib", "lib"]

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.115", features = ["derive"] }
index_vec = { version = "0.1.2", features = ["serde"] }
ordered-float = "2.0.0"
leb128 = "0.2.4"
libc = "0.2.76"
caer_types = { path = "../caer_types" }
aco = { path = "../aco" }
unwind = "0.3.0"
num-traits = "0.2.12"

[dependencies.llvm_stackmaps]
path = "../llvm_stackmaps"

[dependencies.rustc_dwarf]
path = "../rustc_dwarf"

[dependencies.rustc_unwind]
path = "../rustc_unwind"
