[package]
name = "caer_types"
version = "0.1.0"
authors = ["Colm Ó hIcí <git@ohici.ie>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index_vec = { version = "0.1.2", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
pinion = { path = "../pinion" }
