[package]
name = "pinion"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mid-level wrappers around inkwell's API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinion_macros = { path = "../pinion_macros" }
once_cell = "1.4.0"
ordered-float = "2.0.0"
