[package]
name = "pinion_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.72", features = ["full","fold","extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.26"
anyhow = "1.0.40"
