[package]
name = "rustc_unwind"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust.git"
edition = "2018"
include = [
  '/libunwind/*',
]

[lib]
test = false
bench = false
doc = false

[dependencies]
libc = "0.2.94"
cfg-if = "1.0.0"

[build-dependencies]
cc = "1.0.67"

[features]

# Only applies for Linux and Fuchsia targets
# Static link to the in-tree build of llvm libunwind
llvm-libunwind = []

# Only applies for Linux and Fuchsia targets
# If crt-static is enabled, static link to `libunwind.a` provided by system
# If crt-static is disabled, dynamic link to `libunwind.so` provided by system
system-llvm-libunwind = []
