[package]
authors = ["Colm Ó hIcí <colmohici@gmail.com>"]
name = "client"
version = "0.1.0"

[dependencies]
bytes = "0.4.6"
futures = "0.1.20"
lazy_static = "1.0.0"
serde = "1.0.37"
serde_cbor = "0.8.2"
serde_derive = "1.0.37"
serde_json = "1.0.13"
tokio = "0.1.5"
tokio-io = "0.1.6"

[dependencies.common]
path = "../common"

[lib]
crate-type = ["dylib"]
name = "mclient"
